# rust-web

./: .env  Cargo.toml  README.md  config.toml  docker-compose.yaml
src/: app.rs  database.rs  db.rs  error.rs  logger.rs  logging.rs  main.rs  routes.rs  serve.rs  server.rs  state.rs
src/api/user/: create_user.rs  delete_user.rs  dto.rs  get_user.rs  handler.rs  list_users.rs  mod.rs  route.rs  router.rs  update_user.rs
src/config/: database.rs  logger.rs  mod.rs
src/dto/: user.rs
src/entity/: user.rs
src/handler/: user.rs
src/middleware/: cors.rs  mod.rs  request_id.rs
src/migration/: create_users_table.rs  mod.rs
src/routes/: user.rs
